Fix Menu in mobile left-overflowed

--- a/src/scss/side-nav.scss
+++ b/src/scss/side-nav.scss
@@ -45,7 +45,6 @@ header, main, footer
 
 .nav-wrapper > .left
 {
-  margin-left: -15px;
   list-style-type: none;
 }
 
